Open AWT peer packages at agent attach for native handles
Modular JDKs block sun.awt peer reflection, so embedded ComposePanel
surfaces reported null nativeHandle. Export and open present
java.desktop packages via Instrumentation.redefineModule at bootstrap,
filtered per OS so missing packages (e.g. sun.awt.windows on macOS)
do not reject the whole batch.